--- a/src/app/pages/recommend-modal/recommend-modal.page.html
+++ b/src/app/pages/recommend-modal/recommend-modal.page.html
@@ -14,7 +14,7 @@
     <ion-row>
       <!-- <h5>{{movieTitle}}</h5> -->
       <div class="recommend__movie-container">
-        <img class="recommend__movie-poster" [src]="moviePoster">
+        <img class="recommend__movie-poster" [src]="coreMovieDetails.moviePoster">
       </div>
     </ion-row>
     <ion-row>
@@ -37,8 +37,8 @@
       <h4 style="font-weight: 600;">People you Follow</h4>
     </ion-row>
     <div *ngFor="let user of inUserFollowingArrObj | async">
-      <app-recommend-user-card [user]="user.data" [movieId]="movieID" [moviePoster]="moviePoster"
-        [senderRating]="selectedRating" [inputtedMessage]="inputtedMessage">
+      <app-recommend-user-card [user]="user.data" [coreMovieDetails]="coreMovieDetails" [senderRating]="selectedRating"
+        [inputtedMessage]="inputtedMessage">
       </app-recommend-user-card>
     </div>
   </ion-grid>
