Alert for not rating a movie recommendation & one for duplication of sent recs

--- a/src/app/pages/recommend-modal/recommend-modal.page.html
+++ b/src/app/pages/recommend-modal/recommend-modal.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Send Recommendation</ion-title>
-    <ion-icon class="modal-close-button" (click)="close()" name="close"></ion-icon>
+    <!-- <ion-icon class="modal-close-button" (click)="close()" name="close"></ion-icon> -->
+    <ion-button (click)="close()" fill="clear" name="close" slot="end">Done</ion-button>
   </ion-toolbar>
 </ion-header>
 
