--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+
+  // #1d6adc #1755B0 #114084
   --ion-color-primary: #1d6adc;
   --ion-color-primary-rgb: 29, 106, 220;
   --ion-color-primary-contrast: #ffffff;
