--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,4 @@
+<h3>Rating Difference: {{combinedTotDiff}}</h3>
 <ion-segment [(ngModel)]="segmentCategory">
   <ion-segment-button (click)="getCategory()" value="top10">
     Top 10
@@ -5,8 +6,11 @@
   <ion-segment-button (click)="getCategory()" value="watchlist">
     Watchlist
   </ion-segment-button>
-  <ion-segment-button (click)="getCategory()" value="recommendations" class="user-profile__rec-segment">
-    Recommend
+  <ion-segment-button (click)="getCategory()" value="received" class="user-profile__rec-segment" *ngIf="!hideRecTabs">
+    Received
+  </ion-segment-button>
+  <ion-segment-button (click)="getCategory()" value="sent" class="user-profile__rec-segment" *ngIf="!hideRecTabs">
+    Sent
   </ion-segment-button>
 </ion-segment>
 
@@ -41,8 +45,8 @@
     </ion-grid>
   </ion-list>
 </div>
-<div *ngIf="showRecommendations">
-  <div *ngIf="receivedRecs$ | async; else loading; let recs">
+<div *ngIf="showReceived">
+  <div *ngIf="receivedRecs$ | async; else noneReceived; let recs">
     <span *ngFor="let rec of recs">
       <ion-item>
         <ion-grid>
@@ -77,6 +81,45 @@
     </span>
   </div>
 </div>
-<ng-template #loading>
-  Loading...
+<div *ngIf="showSent">
+  <div *ngIf="sentRecs$ | async; else noneSent; let recs">
+    <span *ngFor="let rec of recs">
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="3">
+            </ion-col>
+            <ion-col size="5" class="user-profile__card__movie-title__col">
+            </ion-col>
+            <ion-col size="2" class="user-profile__card__movie-title__col">
+              <h6> Others</h6>
+            </ion-col>
+            <ion-col size="2" class="user-profile__card__movie-title__col">
+              <h6> Your Rating:</h6>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="3">
+              <ion-img [src]="rec.moviePoster"> </ion-img>
+            </ion-col>
+            <ion-col size="5" class="user-profile__card__movie-title__col">
+              <h2 class="ion-margin-bottom"> {{rec.movieTitle}}</h2>
+            </ion-col>
+            <ion-col size="2" class="user-profile__card__movie-title__col">
+              <h2 class="ion-margin-bottom"> {{rec.rateBack}}</h2>
+            </ion-col>
+            <ion-col size="2" class="user-profile__card__movie-title__col">
+              <h2 class="ion-margin-bottom"> {{rec.senderRating}}</h2>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </span>
+  </div>
+</div>
+<ng-template #noneReceived>
+  You have not received any recommendations to this person
+</ng-template>
+<ng-template #noneSent>
+  You have not sent any recommendations to this person
 </ng-template>
