--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,5 +1,7 @@
 ion-searchbar {
   margin-top: 14%;
+  padding: 10px;
+  border-radius: 30px;
 }
 // For the carosuel
 .carousel {
@@ -23,11 +25,13 @@ ion-searchbar {
   margin-right: 16px;
 }
 
-h3 {
+.category-title {
   // color: #092042;
+  color: var(--ion-color-secondary, black);
   margin-left: 10px;
   font-weight: 600;
-  margin-bottom: -2px;
+  margin-bottom: -1px;
+  font-weight: bold;
   //   padding-top: 10px;
 }
 
