--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,7 +19,7 @@
   --ion-color-secondary-shade: #144b9b;
   --ion-color-secondary-tint: #2e66b8;
 
-  --ion-color-tertiary: #5260ff;
+  --ion-color-tertiary: #114084;
   --ion-color-tertiary-rgb: 82, 96, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
@@ -86,113 +86,113 @@
    * -------------------------------------------
    */
 
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66, 140, 255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+  // body {
+  //   --ion-color-primary: #428cff;
+  //   --ion-color-primary-rgb: 66, 140, 255;
+  //   --ion-color-primary-contrast: #ffffff;
+  //   --ion-color-primary-contrast-rgb: 255, 255, 255;
+  //   --ion-color-primary-shade: #3a7be0;
+  //   --ion-color-primary-tint: #5598ff;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80, 200, 255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+  //   --ion-color-secondary: #50c8ff;
+  //   --ion-color-secondary-rgb: 80, 200, 255;
+  //   --ion-color-secondary-contrast: #ffffff;
+  //   --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  //   --ion-color-secondary-shade: #46b0e0;
+  //   --ion-color-secondary-tint: #62ceff;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106, 100, 255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+  //   --ion-color-tertiary: #6a64ff;
+  //   --ion-color-tertiary-rgb: 106, 100, 255;
+  //   --ion-color-tertiary-contrast: #ffffff;
+  //   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+  //   --ion-color-tertiary-shade: #5d58e0;
+  //   --ion-color-tertiary-tint: #7974ff;
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47, 223, 117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0, 0, 0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
+  //   --ion-color-success: #2fdf75;
+  //   --ion-color-success-rgb: 47, 223, 117;
+  //   --ion-color-success-contrast: #000000;
+  //   --ion-color-success-contrast-rgb: 0, 0, 0;
+  //   --ion-color-success-shade: #29c467;
+  //   --ion-color-success-tint: #44e283;
 
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255, 213, 52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0, 0, 0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
+  //   --ion-color-warning: #ffd534;
+  //   --ion-color-warning-rgb: 255, 213, 52;
+  //   --ion-color-warning-contrast: #000000;
+  //   --ion-color-warning-contrast-rgb: 0, 0, 0;
+  //   --ion-color-warning-shade: #e0bb2e;
+  //   --ion-color-warning-tint: #ffd948;
 
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255, 73, 97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255, 255, 255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
+  //   --ion-color-danger: #ff4961;
+  //   --ion-color-danger-rgb: 255, 73, 97;
+  //   --ion-color-danger-contrast: #ffffff;
+  //   --ion-color-danger-contrast-rgb: 255, 255, 255;
+  //   --ion-color-danger-shade: #e04055;
+  //   --ion-color-danger-tint: #ff5b71;
 
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244, 245, 248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0, 0, 0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
+  //   --ion-color-dark: #f4f5f8;
+  //   --ion-color-dark-rgb: 244, 245, 248;
+  //   --ion-color-dark-contrast: #000000;
+  //   --ion-color-dark-contrast-rgb: 0, 0, 0;
+  //   --ion-color-dark-shade: #d7d8da;
+  //   --ion-color-dark-tint: #f5f6f9;
 
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152, 154, 162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0, 0, 0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
+  //   --ion-color-medium: #989aa2;
+  //   --ion-color-medium-rgb: 152, 154, 162;
+  //   --ion-color-medium-contrast: #000000;
+  //   --ion-color-medium-contrast-rgb: 0, 0, 0;
+  //   --ion-color-medium-shade: #86888f;
+  //   --ion-color-medium-tint: #a2a4ab;
 
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34, 36, 40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255, 255, 255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
+  //   --ion-color-light: #222428;
+  //   --ion-color-light-rgb: 34, 36, 40;
+  //   --ion-color-light-contrast: #ffffff;
+  //   --ion-color-light-contrast-rgb: 255, 255, 255;
+  //   --ion-color-light-shade: #1e2023;
+  //   --ion-color-light-tint: #383a3e;
+  // }
 
   /*
    * iOS Dark Theme
    * -------------------------------------------
    */
 
-  .ios body {
-    --ion-background-color: #ffffff;
-    --ion-background-color-rgb: 255, 255, 255;
+  // .ios body {
+  //   --ion-background-color: #ffffff;
+  //   --ion-background-color-rgb: 255, 255, 255;
 
-    --ion-text-color: #092042;
-    --ion-text-color-rgb: 9, 32, 66;
+  //   --ion-text-color: #092042;
+  //   --ion-text-color-rgb: 9, 32, 66;
 
-    --ion-color-step-50: #f3f4f6;
-    --ion-color-step-100: #e6e9ec;
-    --ion-color-step-150: #dadee3;
-    --ion-color-step-200: #ced2d9;
-    --ion-color-step-250: #c2c7d0;
-    --ion-color-step-300: #b5bcc6;
-    --ion-color-step-350: #a9b1bd;
-    --ion-color-step-400: #9da6b3;
-    --ion-color-step-450: #909baa;
-    --ion-color-step-500: #8490a1;
-    --ion-color-step-550: #788497;
-    --ion-color-step-600: #6b798e;
-    --ion-color-step-650: #5f6e84;
-    --ion-color-step-700: #53637b;
-    --ion-color-step-750: #475871;
-    --ion-color-step-800: #3a4d68;
-    --ion-color-step-850: #2e415e;
-    --ion-color-step-900: #223655;
-    --ion-color-step-950: #152b4b;
+  //   --ion-color-step-50: #f3f4f6;
+  //   --ion-color-step-100: #e6e9ec;
+  //   --ion-color-step-150: #dadee3;
+  //   --ion-color-step-200: #ced2d9;
+  //   --ion-color-step-250: #c2c7d0;
+  //   --ion-color-step-300: #b5bcc6;
+  //   --ion-color-step-350: #a9b1bd;
+  //   --ion-color-step-400: #9da6b3;
+  //   --ion-color-step-450: #909baa;
+  //   --ion-color-step-500: #8490a1;
+  //   --ion-color-step-550: #788497;
+  //   --ion-color-step-600: #6b798e;
+  //   --ion-color-step-650: #5f6e84;
+  //   --ion-color-step-700: #53637b;
+  //   --ion-color-step-750: #475871;
+  //   --ion-color-step-800: #3a4d68;
+  //   --ion-color-step-850: #2e415e;
+  //   --ion-color-step-900: #223655;
+  //   --ion-color-step-950: #152b4b;
 
-    --ion-item-background: #ffffff;
+  //   --ion-item-background: #ffffff;
 
-    --ion-card-background: #ffffff;
-  }
+  //   --ion-card-background: #ffffff;
+  // }
 
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
+  // .ios ion-modal {
+  //   --ion-background-color: var(--ion-color-step-100);
+  //   --ion-toolbar-background: var(--ion-color-step-150);
+  //   --ion-toolbar-border-color: var(--ion-color-step-250);
+  // }
 
   /*
    * Material Design Dark Theme
