--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -12,9 +12,13 @@
     <img class="top-div__poster" src="{{movieDetails.posterPath}}" />
     <img class="top-div__background" src="{{movieDetails.backdropPath}}" />
     <div class="top-div__facts">
-      <div class="top-div__fact">{{movieDetails.releaseDate | slice:0:4}}</div>
-      <div class="top-div__fact">{{movieDetails.movieGenre1}}, {{movieDetails.movieGenre2}}</div>
-      <div class="top-div__fact">{{movieDetails.runtime}}</div>
+      <div class="top-div__fact" *ngIf="movieDetails.releaseDate">{{movieDetails.releaseDate | slice:0:4}}</div>
+      <span *ngIf="movieDetails.movieGenre1 && movieDetails.movieGenre2; then show2 else show1"></span>
+      <ng-template #show2 class="top-div__fact"> • {{movieDetails.movieGenre1}},
+        {{movieDetails.movieGenre2}}
+      </ng-template>
+      <ng-template #show1 class="top-div__fact"> • {{movieDetails.movieGenre1}}</ng-template>
+      <div class="top-div__fact" *ngIf="movieDetails.runtime">{{movieDetails.runtime}}</div>
     </div>
     <div *ngIf="movieDetails.imdbRating" class="top-div__imdb">
       <img class="top-div__imdb__image" src="../../../assets/imdb_logo.svg">
@@ -41,11 +45,11 @@
     </ion-segment>
 
     <div *ngIf="segmentModel === 'info'" class="bottom-div">
-      <ion-text class="bottom-div__heading">About:</ion-text>
+      <ion-text class="bottom-div__heading">About</ion-text>
       <ion-text>{{movieDetails.overview}}</ion-text>
       <!-- <ion-text>{{movieDetails.releaseDate}}</ion-text> -->
       <ion-grid>
-        <ion-row class="ion-align-items-center">
+        <ion-row class="ion-align-items-center" *ngIf="movieDetails.directors">
           <ion-col size="5">
             <ion-text class="bottom-div__info__bold-text">Director:</ion-text>
           </ion-col>
@@ -53,7 +57,7 @@
             <ion-text>{{director}}</ion-text>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center">
+        <ion-row class="ion-align-items-center" *ngIf="movieDetails.ageRating">
           <ion-col size="5">
             <ion-text class="bottom-div__info__bold-text">Age Rating:</ion-text>
           </ion-col>
@@ -61,7 +65,7 @@
             <ion-text>{{movieDetails.ageRating}}</ion-text>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center">
+        <ion-row class="ion-align-items-center" *ngIf="movieDetails.language">
           <ion-col size="5">
             <ion-text class="bottom-div__info__bold-text">Language:</ion-text>
           </ion-col>
@@ -69,7 +73,7 @@
             <ion-text>{{movieDetails.language}}</ion-text>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-align-items-center">
+        <ion-row class="ion-align-items-center" *ngIf="movieDetails.releaseDate">
           <ion-col size="5">
             <ion-text class="bottom-div__info__bold-text">Release Date:</ion-text>
           </ion-col>
@@ -79,8 +83,8 @@
         </ion-row>
       </ion-grid>
 
-      <ion-text class="bottom-div__heading">Available On:</ion-text>
-      <ion-text [hidden]="hideAvailabilityMessage">Not yet available in your chosen country</ion-text>
+      <ion-text class="bottom-div__heading">Available On</ion-text>
+      <ion-text [hidden]="hideAvailabilityMessage">Not yet available for streaming in Ireland</ion-text>
       <div class="bottom-div__available-on" *ngFor="let item of providersFlatrateArr.flatrate">
         <img class="bottom-div__available-on--image" src="{{logoUrl}}{{item.logo_path}}" />
       </div>
