--- a/src/global.scss
+++ b/src/global.scss
@@ -112,7 +112,7 @@ text-align: right;
 .add-friends-buttons{
   float: right;
   margin: auto 0;
-  margin-right: 16px;
+  // margin-right: 16px;
   font-size: 30px;
   vertical-align: middle;
   // line-height: 51px;
