--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,10 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">FlickMate</ion-title>
-      <ion-icon name="person-add" class="add-friends-buttons"></ion-icon>
+      <ion-button (click)="getAllUsers()" slot="end" fill="clear">
+        <ion-icon name="person-add" class="add-friends-buttons"></ion-icon>
+
+      </ion-button>
     </ion-toolbar>
   </ion-header>
 
