--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -32,5 +32,5 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-user-profile [inputtedUser]="currentUser"></app-user-profile>
+  <app-user-profile [inputtedUser]="currentUser" [currentUserBool]="currentUserBool"></app-user-profile>
 </ion-content>
