--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -25,9 +25,13 @@
       <div class="top-div__imdb__rating" value=" - ">{{movieDetails.imdbRating}}</div>
     </div>
     <div class="top-div__buttons">
-      <ion-button class="top-div__button" (click)="addMovieToWatchlist()">
+      <ion-button class="top-div__button" (click)="addMovieToWatchlist('watchlist')">
         <ion-icon name="add"></ion-icon>
         Watchlist
+      </ion-button>
+      <ion-button class="top-div__button" (click)="addMovieToWatchlist('top10')">
+        <ion-icon name="add"></ion-icon>
+        My top 10
       </ion-button>
       <ion-button class="top-div__button" (click)="openReviewModal('recommend')">
         Recommend</ion-button>
