--- a/src/app/pages/profile-page/profile-page.page.html
+++ b/src/app/pages/profile-page/profile-page.page.html
@@ -34,5 +34,5 @@
 </ion-header>
 
 <ion-content>
-  <app-user-profile [inputtedUser]="inputtedUser"></app-user-profile>
+  <app-user-profile [inputtedUser]="inputtedUser" [currentUserBool]="currentUserBool"></app-user-profile>
 </ion-content>
