--- a/src/app/pages/registration/registration.page.html
+++ b/src/app/pages/registration/registration.page.html
@@ -49,7 +49,7 @@
     <ion-row> Already have an account? </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button (click)="openLoginPage()" color="medium">Login</ion-button>
+        <ion-button (click)="openLoginPage()" color="primary">Login</ion-button>
       </ion-col>
     </ion-row>
   </div>
