--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -114,6 +114,7 @@
       </div>
 
       <ion-text class="bottom-div__heading">Trailer</ion-text>
+      <ion-button (click)="invokeVideoPlayer()">Start Video Player</ion-button>
       <img style="width: 100%" src="{{movieTrailerThumb}}" alt="Movie Trailer Thumbnail" />
     </div>
 
