--- a/src/global.scss
+++ b/src/global.scss
@@ -99,6 +99,20 @@ text-align: right;
   font-size: 2rem;
   color: gold;
 }
+.recommend__movie-container{
+  background-color:#1d6adc;
+  background:
+  linear-gradient(rgb(29, 106, 220),  rgba(0, 0, 0, 1));
+  width: 200px;
+  margin: 16px auto;
+  height: 300px;
+
+}
+
+.recommend__movie-poster{
+margin: 0 auto;
+}
+
 .recommend__rating-slider:focus {
   outline:0 !important;
   // box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
